test/langtools/tools/javac/valhalla/lworld-values/FlattenabilityModifiersDisallowed.out
FlattenabilityModifiersDisallowed.java:9:5: compiler.err.flattenability.modifiers.disallowed
FlattenabilityModifiersDisallowed.java:10:5: compiler.err.flattenability.modifiers.disallowed
2 errors
